<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- iphone_14___15_pro_max___10 strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="username_ek1_string">username</string>
	<string name="password_string">password</string>
	<string name="sign_in_ek1_string">sign in</string>
	<string name="dont_have_an_acount__sign_up_string">Dont have an acount? Sign up</string>
	<string name="forgot_password__string">Forgot password?</string>
    <string name="ellipse_34">ellipse_34</string>
    <string name="rectangle_239">rectangle_239</string>
	<string name="icon">icon</string>
	<string name="ellipse_6">ellipse_6</string>
	<string name="notch">notch</string>
	<string name="rectangle">rectangle</string>
	<string name="combined_shape">combined_shape</string>
	<string name="rectangle_ek1">rectangle_ek1</string>
	<string name="wifi">wifi</string>
	<string name="mobile_signal">mobile_signal</string>
	<string name="_9_41">_9_41</string>
	<string name="line_17">line_17</string>
	<string name="image_18">image_18</string>
    <string name="feed_ek2_string" />
	<string name="additional_content" />
	<string name="footer_button_text" />
	<string name="footer_text" />
	<string name="news_string">news</string>
	<string name="chats_string">chats</string>
	<string name="_5_8_string">5/8</string>
	<string name="news_ek1_string">news</string>
	<string name="chats_ek1_string">chats</string>
	<string name="header_string">global warming now worse than ever</string>
	<string name="he_ll_want_to_use_your_yacht__and_i_don_t_want_this_thing_smelling_like_fish__string">scientists predict the average temperatures to rise rapidly in the next decades</string>
	<string name="_8m_ago_string">8m ago</string>
	<string name="header_ek1_string">climate change is a lie</string>
	<string name="he_ll_want_to_use_your_yacht__and_i_don_t_want_this_thing_smelling_like_fish__ek1_string">dont let the deep state lie to you</string>
	<string name="_8m_ago_ek1_string">8m ago</string>
	<string name="email_string">Search</string>
	<string name="discover_string">discover</string>
	<string name="german_politics_string">German Politics</string>
	<string name="human_rights_string">Human rights</string>
	<string name="israel_politics_string">Israel politics</string>
	<string name="i_highly_disagree____string">I highly disagree...</string>
	<string name="it_was_my_understanding_that____string">it was my understanding that...</string>
	<string name="it_was_my_understanding_that____ek1_string">it was my understanding that...</string>
	<string name="discussions_on_so_and_so_and_this_and_that____string">Discussions on so and so and this and that...</string>
	<string name="conflict_in_the_middle_east_string">conflict in the middle east</string>
	<string name="view_string">view</string>
	<string name="fyp_string">fyp</string>
	<string name="for_you_string">For you</string>
	<string name="feed_ek1_string">Profile</string>
	<string name="username_string">Username</string>
	<string name="current_forums__string">Current forums:</string>
	<string name="_70_string">70</string>
	<string name="edit_profile_string">Edit profile</string>
	<string name="all_points_1000_string">All points:1000</string>
	<string name="forum_name_string">Forum name</string>
	<string name="points___80_string">points : 80</string>
	<string name="forum_name_ek1_string">Forum name</string>
	<string name="points___80_ek1_string">points : 80</string>
	<string name="forum_name_ek2_string">Forum name</string>
	<string name="points___80_ek2_string">points : 80</string>
	<string name="log_in_string">Sign Up</string>
	<string name="email_ek1_string">User name</string>
	<string name="phone_number_string">Phone number</string>
	<string name="show_ek1_string">Show</string>
	<string name="log_in_ek1_string">Sign Up</string>
	<string name="already_have_an_account__login_string">Already have an account? Login</string>
</resources>