<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="410dp"
	android:layout_height="735dp">
	<!--
    /*
     *	This content is generated from the API File Info.
     *	(Alt+Shift+Ctrl+I).
     *
     *	@desc
     *	@file 		sign_up_2
     *	@date 		Sunday 28th of July 2024 03:29:43 PM
     *	@title 		Page 2
     *	@author
     *	@keywords
     *	@generator 	Export Kit v1.3.figma
     *
     */
    -->
	<ScrollView
		android:id="@+id/sign_up_2"
		android:layout_width="450dp"
		android:layout_height="match_parent">

		<RelativeLayout
			android:id="@+id/content_container"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">


			<RelativeLayout
				android:id="@+id/page_sign_up_2_ek1"
				android:layout_width="410dp"
				android:layout_height="735dp"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				tools:ignore="UselessParent">


				<View
					android:id="@+id/_bg__sign_up_2_ek2"
					android:layout_width="410dp"
					android:layout_height="735dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					tools:ignore="UselessParent"
					android:background="@drawable/_bg__sign_up_2_ek2_shape" />

				<RelativeLayout
					android:id="@+id/ios_status_bar_black"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp">


					<RelativeLayout
						android:id="@+id/bg"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="78dp"
						android:layout_marginTop="-2dp">

						<ImageView
							android:id="@+id/notch"
							android:layout_width="219dp"
							android:layout_height="30dp"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:contentDescription="notch"
							android:src="@drawable/notch" />

					</RelativeLayout>


					<RelativeLayout
						android:id="@+id/right_side"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="293.67dp"
						android:layout_marginTop="17.33dp">


						<RelativeLayout
							android:id="@+id/battery"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="42dp"
							android:layout_marginTop="0dp">

							<ImageView
								android:id="@+id/rectangle"
								android:layout_width="22dp"
								android:layout_height="11.33dp"
								android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:alpha="0.34999999403954"
								android:contentDescription="rectangle"
								android:src="@drawable/rectangle" />

							<ImageView
								android:id="@+id/combined_shape"
								android:layout_width="1.33dp"
								android:layout_height="4dp"
								android:layout_marginStart="23dp"
								android:layout_marginTop="4dp"
								android:alpha="0.40000000596046"
								android:contentDescription="combined_shape"
								android:src="@drawable/combined_shape" />

							<ImageView
								android:id="@+id/rectangle_ek1"
								android:layout_width="18dp"
								android:layout_height="7.33dp"
								android:layout_marginStart="2dp"
								android:layout_marginTop="2dp"
								android:contentDescription="rectangle_ek1"
								android:src="@drawable/rectangle_ek1" />

						</RelativeLayout>

						<ImageView
							android:id="@+id/wifi"
							android:layout_width="15.27dp"
							android:layout_height="10.97dp"
							android:layout_marginStart="22dp"
							android:layout_marginTop="0dp"
							android:contentDescription="wifi"
							android:src="@drawable/wifi" />

						<ImageView
							android:id="@+id/mobile_signal"
							android:layout_width="17dp"
							android:layout_height="10.67dp"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:contentDescription="mobile_signal"
							android:src="@drawable/mobile_signal" />

					</RelativeLayout>


					<RelativeLayout
						android:id="@+id/left_side"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="33.45dp"
						android:layout_marginTop="17.17dp">

						<ImageView
							android:id="@+id/_9_41"
							android:layout_width="28.43dp"
							android:layout_height="11.09dp"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:contentDescription="_9_41"
							android:src="@drawable/_9_41"
							tools:ignore="HardcodedText" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/page_header"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginTop="66dp">

					<TextView
						android:id="@+id/log_in"
						android:layout_width="132dp"
						android:layout_height="57dp"
						android:layout_gravity="center_horizontal|center"
						android:layout_marginLeft="112dp"
						android:layout_marginTop="0dp"
						android:gravity="center"
						android:text="@string/log_in_string"
						android:textColor="@color/log_in_color"
						android:textSize="30sp" />


					<RelativeLayout
						android:id="@+id/icon_x"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="3dp"
						android:layout_marginTop="8dp">

						<View
							android:id="@+id/line_3"
							android:layout_width="16.6dp"
							android:layout_height="2dp"
							android:layout_marginStart="1dp"
							android:layout_marginTop="8dp"
							android:background="@drawable/line_3_shape" />

						<View
							android:id="@+id/line_4"
							android:layout_width="16.6dp"
							android:layout_height="2dp"
							android:layout_marginStart="0dp"
							android:layout_marginTop="7dp"
							android:background="@drawable/line_4_shape" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/input_text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginTop="128dp">

					<ImageView
						android:id="@+id/bg_ek2"
						android:layout_width="343dp"
						android:layout_height="50dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:contentDescription="bg_ek2"
						android:src="@drawable/bg_ek2" />

					<TextView
						android:id="@+id/email"
						android:layout_width="104dp"
						android:layout_height="30dp"
						android:layout_marginLeft="16dp"
						android:layout_marginTop="16dp"
						android:text="@string/email_string"
						android:textColor="@color/line_3_color"
						android:textSize="16sp" />

				</RelativeLayout>

				<TextView
					android:id="@+id/email_ek1"
					android:layout_width="104dp"
					android:layout_height="30dp"
					android:layout_marginLeft="28dp"
					android:layout_marginTop="220dp"
					android:text="@string/email_ek1_string"
					android:textColor="@color/line_3_color"
					android:textSize="16sp" />

				<ImageView
					android:id="@+id/bg_ek3"
					android:layout_width="343dp"
					android:layout_height="50dp"
					android:layout_marginStart="16dp"
					android:layout_marginTop="198dp"
					android:contentDescription="bg_ek3"
					android:src="@drawable/bg_ek3" />

				<TextView
					android:id="@+id/phone_number"
					android:layout_width="133dp"
					android:layout_height="30dp"
					android:layout_marginLeft="28dp"
					android:layout_marginTop="211dp"
					android:text="@string/phone_number_string"
					android:textColor="@color/line_3_color"
					android:textSize="16sp" />


				<RelativeLayout
					android:id="@+id/input_text_ek1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="19dp"
					android:layout_marginTop="268dp">

					<ImageView
						android:id="@+id/bg_ek4"
						android:layout_width="343dp"
						android:layout_height="50dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:contentDescription="bg_ek4"
						android:src="@drawable/bg_ek4" />

					<TextView
						android:id="@+id/password"
						android:layout_width="96dp"
						android:layout_height="30dp"
						android:layout_marginLeft="16dp"
						android:layout_marginTop="16dp"
						android:text="@string/password_string"
						android:textColor="@color/line_3_color"
						android:textSize="16sp" />

					<TextView
						android:id="@+id/show_ek1"
						android:layout_width="56dp"
						android:layout_height="30dp"
						android:layout_gravity="center_vertical|end"
						android:layout_marginLeft="281dp"
						android:layout_marginTop="16dp"
						android:gravity="end"
						android:text="@string/show_ek1_string"
						android:textColor="@color/show_ek1_color"
						android:textSize="16sp" />

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/button_primary"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="19dp"
					android:layout_marginTop="371dp">

					<TextView
						android:id="@+id/log_in_ek1"
						android:layout_width="74dp"
						android:layout_height="30dp"
						android:layout_gravity="center_horizontal|center"
						android:layout_marginLeft="138dp"
						android:layout_marginTop="16dp"
						android:gravity="center"
						android:text="@string/log_in_ek1_string"
						android:textColor="@color/_bg__sign_up_2_ek2_color"
						android:textSize="16sp"
						android:textStyle="bold" />

				</RelativeLayout>

				<TextView
					android:id="@+id/already_have_an_account__login"
					android:layout_width="267dp"
					android:layout_height="30dp"
					android:layout_marginLeft="63dp"
					android:layout_marginTop="457dp"
					android:text="@string/already_have_an_account__login_string"
					android:textColor="@color/show_ek1_color"
					android:textSize="16sp"
					android:textStyle="bold" />

				<ImageView
					android:id="@+id/ellipse_35"
					android:layout_width="88dp"
					android:layout_height="83dp"
					android:layout_marginStart="276dp"
					android:layout_marginTop="44dp"
					android:contentDescription="ellipse_35"
					android:src="@drawable/ellipse_35" />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>